--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.15.3",
+    "aws-amplify": "^4.3.20",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "use-shopping-cart": "^3.1.1"
   }
 }
