Install stripe and use-shopping-cart in fetchStripeSessionURL function

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -67,7 +67,16 @@
     "fetchStripeSessionURL": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "amplifystripestarter",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
     },
     "stripeWebhooks": {
       "build": true,
