--- a/amplify/backend/function/fetchStripeSessionURL/src/package.json
+++ b/amplify/backend/function/fetchStripeSessionURL/src/package.json
@@ -6,5 +6,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
+  },
+  "dependencies": {
+    "stripe": "^11.4.0",
+    "use-shopping-cart": "^3.1.3"
   }
 }
