--- a/amplify/backend/function/stripeWebhooks/src/package.json
+++ b/amplify/backend/function/stripeWebhooks/src/package.json
@@ -6,5 +6,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
+  },
+  "dependencies": {
+    "nodemailer": "^6.8.0",
+    "stripe": "^11.4.0"
   }
 }
