Add new product creation

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -81,7 +81,16 @@
     "stripeWebhooks": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "productImages",
+          "attributes": [
+            "BucketName"
+          ]
+        }
+      ]
     }
   },
   "api": {
